2003-05-11  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/monitor.c (cyg_monitor_network): Added IPv6 information to
	the display of network information.
	* tests/httpd1.c: New file: Simple program to actually run the 
	server so we can test it.
	* cdl/httpd.cdl: Added the test program.

2003-05-10  Andrew Lunn   <andrew.lunn@ascom,ch>

	* src/httpd.c: Added support for serving content over IPv6,
	* doc/httpd.sgml: Added comment about IPv6.

2003-04-23  Bob Koninckx  <bob.koninckx@mech.kuleuven.ac.be>

	* cdl/httpd.cdl: Only build monitor in CDL option.

2003-03-17  Nick Garnett  <nickg@balti.calivar.com>

	* src/monitor.c (cyg_monitor_network): Added monitoring of Mbufs
	to network page.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/httpd.cdl: Add doc link.

2003-02-14  Bob Koninckx  <bob.koninckx@mech.kuleuven.ac.be>

	* include/httpd.h (html_end): fix typo.

2002-12-06  Nick Garnett  <nickg@ecoscentric.com>

	* include/httpd.h: 
	* src/init.cxx: 
	* src/httpd.c: 
	* src/monitor.c: 
	* doc/httpd.sgml: 
	* cdl/httpd.cdl: 
	Created HTTPD package.
	
# Copyright (C) 2002 Nick Garnett
# All Rights Reserved.
#
# Permission is granted to use, copy, modify and redistribute this
# file.
		