@@ -154,104 +154,105 @@ static cyg_bool match( char *name, char *pattern )
 /*                                                                   */
 /* Reads the HTTP header, look it up in the table and calls the      */
 /* handler.                                                          */
-static void cyg_httpd_process( int client_socket, struct sockaddr *client_address ) {
-  
-  int calen = sizeof(*client_address);
-  int nlc = 0;
-  char request[CYGNUM_HTTPD_SERVER_BUFFER_SIZE];
-  FILE *client;
-  cyg_httpd_table_entry *entry = cyg_httpd_table;
-  char *filename;
-  char *formdata = NULL;
-  char *p;
-  cyg_bool success = false;
-  char name[64];
-  char port[10];
 
-  getnameinfo(client_address, calen, name, sizeof(name), 
-              port, sizeof(port), NI_NUMERICHOST|NI_NUMERICSERV);
-  HTTPD_DIAG("Connection from %s[%s]\n",name,port);
+static void cyg_httpd_process( int client_socket, struct sockaddr *client_address )
+{
+    int calen = sizeof(*client_address);
+    int nlc = 0;
+    char request[CYGNUM_HTTPD_SERVER_BUFFER_SIZE];
+    FILE *client;
+    cyg_httpd_table_entry *entry = cyg_httpd_table;
+    char *filename;
+    char *formdata = NULL;
+    char *p;
+    cyg_bool success = false;
+    char name[64];
+    char port[10];
+
+    getnameinfo(client_address, calen, name, sizeof(name), 
+                port, sizeof(port), NI_NUMERICHOST|NI_NUMERICSERV);
+    HTTPD_DIAG("Connection from %s[%s]\n",name,port);
   
-  /* Convert the file descriptor to a C library FILE object so
-   * we can use fprintf() and friends on it.
-   */
-  client = fdopen( client_socket, "r+");
+    /* Convert the file descriptor to a C library FILE object so
+     * we can use fprintf() and friends on it.
+     */
+    client = fdopen( client_socket, "r+");
   
-  /* We are really only interested in the first line.
-   */
-  fgets( request, sizeof(request), client );
+    /* We are really only interested in the first line.
+     */
+    fgets( request, sizeof(request), client );
   
-  HTTPD_DIAG("Request >%s<\n", request );
+    HTTPD_DIAG("Request >%s<\n", request );
   
-  /* Absorb the rest of the header. We nibble it away a
-   * character at a time like this to avoid having to define
-   * another buffer to read lines into. If we ever need to take
-   * more interest in the header fields, we will need to be a
-   * lot more sophisticated than this.
-   */
-  do{
-    int c = getc( client );
-    HTTPD_DIAG("%c",c);
-    if( c == '\n' )
-      nlc++;
-    else if( c != '\r' )
-      nlc = 0;
-  } while(nlc < 2);
+    /* Absorb the rest of the header. We nibble it away a
+     * character at a time like this to avoid having to define
+     * another buffer to read lines into. If we ever need to take
+     * more interest in the header fields, we will need to be a
+     * lot more sophisticated than this.
+     */
+    do{
+        int c = getc( client );
+        HTTPD_DIAG("%c",c);
+        if( c == '\n' )
+            nlc++;
+        else if( c != '\r' )
+            nlc = 0;
+    } while(nlc < 2);
   
-  /* Extract the filename and any form data being returned.
-   * We know that the "GET " request takes 4 bytes.
-   * TODO: handle POST type requests as well as GET's.
-   */
+    /* Extract the filename and any form data being returned.
+     * We know that the "GET " request takes 4 bytes.
+     * TODO: handle POST type requests as well as GET's.
+     */
   
-  filename = p = request+4;
+    filename = p = request+4;
   
-  /* Now scan the filename until we hit a space or a '?'. If we
-   * end on a '?' then the rest is a form request. Put NULs at
-   * the end of each string.
-   */
-  while( *p != ' ' && *p != '?' )
-    p++;
-  if( *p == '?' )
-    formdata = p+1;
-  *p = 0;
-  
-  if( formdata != NULL )
-    {
-      while( *p != ' ' )
+    /* Now scan the filename until we hit a space or a '?'. If we
+     * end on a '?' then the rest is a form request. Put NULs at
+     * the end of each string.
+     */
+    while( *p != ' ' && *p != '?' )
         p++;
-      *p = 0;
+    if( *p == '?' )
+        formdata = p+1;
+    *p = 0;
+  
+    if( formdata != NULL )
+    {
+        while( *p != ' ' )
+            p++;
+        *p = 0;
     }
   
-  HTTPD_DIAG("Request filename >%s< formdata >%s<\n",filename,formdata?formdata:"-NULL-");
+    HTTPD_DIAG("Request filename >%s< formdata >%s<\n",filename,formdata?formdata:"-NULL-");
   
-  HTTPD_DIAG("table: %08x...%08x\n",cyg_httpd_table, cyg_httpd_table_end);
+    HTTPD_DIAG("table: %08x...%08x\n",cyg_httpd_table, cyg_httpd_table_end);
   
-  /* Now scan the table for a matching entry. If we find one
-   * call the handler routine. If that returns true then we
-   * terminate the scan, otherwise we keep looking.
-   */
-  while( entry != cyg_httpd_table_end )
+    /* Now scan the table for a matching entry. If we find one
+     * call the handler routine. If that returns true then we
+     * terminate the scan, otherwise we keep looking.
+     */
+    while( entry != cyg_httpd_table_end )
     {
-      HTTPD_DIAG("try %08x: %s\n", entry, entry->pattern);
+        HTTPD_DIAG("try %08x: %s\n", entry, entry->pattern);
       
-      if( match( filename, entry->pattern ) )
+        if( match( filename, entry->pattern ) )
         {
-          if( (success = entry->handler( client, filename, formdata, entry->arg )) )
-            break;
+            if( (success = entry->handler( client, filename, formdata, entry->arg )) )
+                break;
         }
       
-      entry++;
+        entry++;
     }
   
-  /* If we failed to find a match in the table, send a "not
-   * found" response.
-   * TODO: add an optional fallback to go look for files in
-   * some filesystem, somewhere.
-   */
-  if( !success )
-    cyg_httpd_send_html( client, NULL, NULL, cyg_httpd_not_found );
+    /* If we failed to find a match in the table, send a "not
+     * found" response.
+     * TODO: add an optional fallback to go look for files in
+     * some filesystem, somewhere.
+     */
+    if( !success )
+        cyg_httpd_send_html( client, NULL, NULL, cyg_httpd_not_found );
 
-  fclose(client);
+    fclose(client);
 }
 
 /* ================================================================= */
@@ -285,15 +286,11 @@ static void cyg_httpd_server( cyg_addrword_t arg )
         if (FD_ISSET(server_socket, &readfds)) {
           client_socket = accept( server_socket, &client_address, &calen );
           cyg_httpd_process(client_socket, &client_address);
-          err = close( client_socket );
-          CYG_ASSERT( err == 0, "fclose() returned error");        
         }
 #ifdef CYGPKG_NET_INET6
         if (FD_ISSET(server_socket6, &readfds)) {
           client_socket = accept( server_socket6, &client_address, &calen );
           cyg_httpd_process(client_socket, &client_address);
-          err = close( client_socket );
-          CYG_ASSERT( err == 0, "fclose(AF_INET6) returned error");        
         }
 #endif            
     } while(1);
